updating base files

--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,7 +9,7 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 98%;                     /* changed from 800 pixels */
+    width: 98%;
     max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
@@ -35,7 +35,7 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 3.75%;            /* 30 / 800 x 100 */
+	padding: 0 3.75%;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
@@ -49,7 +49,7 @@ header img {
 }
 #nav_menu ul li {
 	float: left;
-    width: 20%;                 /* 160 / 800 x 100 */
+    width: 20%;
 }
 #nav_menu ul li a {
     display: block;
@@ -87,9 +87,9 @@ main {
 
 /* the styles for the section */
 section {
-	width: 65.625%;                  /* 525 / 800 X 100 */
+	width: 65.625%;
 	float: right;
-	padding: 0 2.5% 20px 2.5%;       /* 20 / 800 x 100 */
+	padding: 0 2.5% 20px 2.5%;
 }
 section h1 {
 	font-size: 150%;
@@ -139,9 +139,9 @@ article img {
 
 /* the styles for the aside */
 aside {
-	width: 26.875%;                     /* 215 / 800 x 100 */
+	width: 26.875%;
 	float: right;
-	padding: 0 0 20px 2.5%;             /* 20 / 800 x 100 */
+	padding: 0 0 20px 2.5%;
 }
 aside h2 {
 	color: #800000;
